resolve overflow issue and replace wrongly sized images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,9 +99,6 @@ Please note - I mainly looked up in dev tools how bootstrap
 .card-div {
     height: 29vh;
     border-width: 3px;
-}
-
-.card-img {
     overflow: hidden;
 }
 
